force-app/main/default/objects/Brackets_Group__c/Brackets_Group__c.object-meta.xml
<CustomObject>
    <label>Pool</label>
    <nameField>
        <label>Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>