force-app/main/default/objects/Brackets_Group__c/fields/NumOfMembers__c.field-meta.xml
<CustomField>
    <fullName>NumOfMembers__c</fullName>
    <description>Numbers of members joined to this group.</description>
    <label>Members</label>
    <summaryForeignKey
    >Brackets_UserTournament__c.Brackets_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>