force-app/main/default/objects/Brackets_Group__c/fields/TournamentType__c.field-meta.xml
<CustomField>
    <fullName>TournamentType__c</fullName>
    <formula>Text(Brackets_Tournament__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TournamentType</label>
    <type>Text</type>
</CustomField>