force-app/main/default/objects/Brackets_Group__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText
    >Round By Round lets users predict a single round at a time.  Full Tournament requires full prediction up front and cannot be changed.</inlineHelpText>
    <label>Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Tournament</fullName>
                <default>true</default>
                <label>Full Tournament</label>
            </value>
            <value>
                <fullName>Round By Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>