force-app/main/default/objects/Brackets_Group__c/validationRules/TournamentNotUpdatable.validationRule-meta.xml
<ValidationRule>
    <fullName>TournamentNotUpdatable</fullName>
    <active>true</active>
    <errorConditionFormula
    >NOT(ISNEW()) &amp;&amp; ISCHANGED( Brackets_Tournament__c )</errorConditionFormula>
    <errorDisplayField>Brackets_Tournament__c</errorDisplayField>
    <errorMessage>This field can&apos;t be updated.</errorMessage>
</ValidationRule>